<resources>
    <string name="app_name">Stock Watchlist</string>
    <string name="title_company_listing">Company Listing</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="date">Date</string>
    <string name="open">Open: 0.00</string>
    <string name="high">High: 0.00</string>
    <string name="low">Low: 0.00</string>
    <string name="close">Close: 0.00</string>
    <string name="volume">Volume: 0</string>
    <string name="company_name">Company Name</string>
    <string name="exchange">Exchange</string>
    <string name="symbol">(Symbol)</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="industry">Industry: </string>
    <string name="country">Country: </string>
    <string name="description">International Business Machines Corporation (IBM) is an American multinational technology company headquartered in Armonk, New York, with operations in over 170 countries. The company began in 1911, founded in Endicott, New York, as the Computing-Tabulating-Recording Company (CTR) and was renamed International Business Machines in 1924. IBM is incorporated in New York. IBM produces and sells computer hardware, middleware and software, and provides hosting and consulting services in areas ranging from mainframe computers to nanotechnology. IBM is also a major research organization, holding the record for most annual U.S. patents generated by a business (as of 2020) for 28 consecutive years. Inventions by IBM include the automated teller machine (ATM), the floppy disk, the hard disk drive, the magnetic stripe card, the relational database, the SQL programming language, the UPC barcode, and dynamic random-access memory (DRAM). The IBM mainframe, exemplified by the System/360, was the dominant computing platform during the 1960s and 1970s.</string>
    <string name="watchlist_icon">Watchlist icon</string>
    <string name="stock_price">Stock price:</string>
</resources>