<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/company_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".ui.companyDetailed.CompanyDetailActivity">

  <TextView
      android:id="@+id/tvCompanyName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/company_name"
      android:textStyle="bold"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvCompanySymbol"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/symbol"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvCompanyName" />

  <View
      android:id="@+id/hl1"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@android:color/darker_gray"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintTop_toBottomOf="@+id/tvCompanySymbol"/>

  <TextView
      android:id="@+id/tvIndustry"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/industry"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hl1" />

  <TextView
      android:id="@+id/tvCountry"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/country"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvIndustry" />

  <View
      android:id="@+id/hl2"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@android:color/darker_gray"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintTop_toBottomOf="@+id/tvCountry"/>

  <TextView
      android:id="@+id/tvDescription"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/description"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hl2" />

  <View
      android:id="@+id/hl3"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@android:color/darker_gray"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintTop_toBottomOf="@+id/tvDescription"/>

  <TextView
      android:id="@+id/tvStockPrice"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/stock_price"
      android:textSize="22sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hl3" />

</androidx.constraintlayout.widget.ConstraintLayout>