<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvCICompanyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/tvCICompanyExchange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/tvCICompanyExchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        android:textStyle="normal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCICompanySymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol"
        android:textStyle="normal"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCICompanyName" />

    <TextView
        android:id="@+id/tvCICompanyStockPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCICompanyExchange" />

</androidx.constraintlayout.widget.ConstraintLayout>